Migrating code from collection

--- a/test/integration/targets/gcp_compute_ssl_certificate/tasks/autogen.yml
+++ b/test/integration/targets/gcp_compute_ssl_certificate/tasks/autogen.yml
@@ -16,6 +16,7 @@
 - name: delete a SSL certificate
   gcp_compute_ssl_certificate:
     name: "{{ resource_name }}"
+    region: us-central1
     description: A certificate for testing. Do not use this certificate in production
     certificate: |-
       -----BEGIN CERTIFICATE-----
@@ -49,6 +50,7 @@
 - name: create a SSL certificate
   gcp_compute_ssl_certificate:
     name: "{{ resource_name }}"
+    region: us-central1
     description: A certificate for testing. Do not use this certificate in production
     certificate: |-
       -----BEGIN CERTIFICATE-----
@@ -101,6 +103,7 @@
 - name: create a SSL certificate that already exists
   gcp_compute_ssl_certificate:
     name: "{{ resource_name }}"
+    region: us-central1
     description: A certificate for testing. Do not use this certificate in production
     certificate: |-
       -----BEGIN CERTIFICATE-----
@@ -139,6 +142,7 @@
 - name: delete a SSL certificate
   gcp_compute_ssl_certificate:
     name: "{{ resource_name }}"
+    region: us-central1
     description: A certificate for testing. Do not use this certificate in production
     certificate: |-
       -----BEGIN CERTIFICATE-----
@@ -191,6 +195,7 @@
 - name: delete a SSL certificate that does not exist
   gcp_compute_ssl_certificate:
     name: "{{ resource_name }}"
+    region: us-central1
     description: A certificate for testing. Do not use this certificate in production
     certificate: |-
       -----BEGIN CERTIFICATE-----
